# zkvm--sp1

./: .gitignore  .gitmodules  presentation.html  zkvm_professional_paper (1).html
zkage/program/: Cargo.toml
zkage/program/src/: main.rs
zkage/script/: Cargo.toml
zkage/script/src/: main.rs
zkhuman/: Cargo.toml
zkhuman/program/: Cargo.toml
zkhuman/program/src/: main.rs
zkhuman/script/: Cargo.toml
zkhuman/script/src/: main.rs
zkpassword/: .env  Cargo.toml
zkpassword/program/: Cargo.toml
zkpassword/program/src/: main.rs
zkpassword/script/: Cargo.toml
zkpassword/script/src/: main.rs
